src/style.css
/* General layout */
html,
body {
  font-family: Verdana, Geneva, sans-serif;
  color: #453f37;
  text-align: center;
  align-items: center;
  width: 100vw;
  background: #fff url("/static/brushed-alum.png");
}
body {
  margin: 0;
}
h1 {
  font-family: "Sedgwick Ave", cursive;
}
h2 {
  font-weight: 300;
}
h6 {
  font-weight: 500;
}
#main-container {
  min-height: 100vh;
  min-width: 100vw;
  position: relative;
}
#content-wrap {
  padding-bottom: 18vh;
  margin: 0 5vw;
}
/* Navbar */
.nav-link {
  font-family: "Architects Daughter", cursive;
  font-size: 1.5rem;
  padding: 0.5rem;
}
.nav-link:hover {
  color: #b1ddf1 !important;
  border-bottom: 2px solid #e6e6e6;
}
.nav-menu.navbar-collapse.collapse {
  transition: height 0.5s ease-in-out;
}

.nav-menu.navbar-collapse.collapse.show {
  background-color: rgba(136, 82, 127, 1);
  width: 50vw;
  height: auto;
  padding: 0;
  margin-left: 50vw;
  position: relative;
  top: -40px;
  z-index: 3;
  border: 1px solid;
  border-radius: 5px;
  box-shadow: 3px 3px rgba(69, 63, 55, 0.5);
}
.nav-menu.navbar-collapse.collapse.show > a.nav-link {
  width: 33.33vw;
  text-align: center !important;
  color: #e6e6e6 !important;
  margin: auto;
  height: auto;
}
.nav-menu.navbar-collapse.collapse.show > a.nav-link:hover {
  color: #453f37 !important;
  font-weight: bold;
}
/* home page */
#whoLink {
  color: #88527f;
}
#whoLink:hover {
  color: #b1ddf1;
}
/* About page */
.card-img-top.headshot {
  height: 65vh;
  object-fit: cover;
}

/* Creations page */
.card-img.project-img {
  max-width: 200px !important;
  max-height: 200px !important;
  float: left;
}
.project-link {
  background-color: #88527f;
  color: #b1ddf1;
  border: #fff solid 1px;
  text-transform: uppercase;
  padding: 0.5rem 0.75rem;
}
.project-link:hover {
  background-color: #b1ddf1;
  color: #88527f;
  border: none;
}
.creation-tech {
  color: #fff !important;
}
/* Contact page */
form {
  margin: 0 15vw !important;
  text-align: left;
}
.form-label {
  padding-left: 0.5rem;
}

